[workspace]
resolver = "2"
members = ["krb5"]

[workspace.package]
version = "0.0.1"
authors = ["InnoRealm"]
edition = "2021"
description = "Kerberos in Rust"
repository = "https://github.com/innorealm/krb5-rust"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.77"
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["derive"] }
krb5 = { path = "krb5", version = "0.0.1" }
once_cell = "1.19.0"
