[workspace]
resolver = "2"
members = ["krb5"]

[workspace.package]
version = "0.0.1"
authors = ["InnoRealm"]
edition = "2021"
description = "Kerberos in Rust"
repository = "https://github.com/innorealm/krb5-rust"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive"] }
config = "0.13.4"
der-parser = "8.2.0"
dns-lookup = "2.0.4"
krb5 = { path = "krb5", version = "0.0.1" }
nix = { version = "0.27.1", features = ["user"] }
nom = "7.1.3"
once_cell = "1.19.0"
