[package]
name = "krb5"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
config.workspace = true
der-parser.workspace = true
dns-lookup.workspace = true
nix.workspace = true
nom.workspace = true
once_cell.workspace = true
